@@ -10,12 +10,10 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 
 /**
- * Custom deserializer that can handle either a string or array for companion
- * plants.
+ * Custom deserializer that can handle either a string or array for companion plants.
  * Converts both formats to a List of strings.
  */
 @Slf4j
@@ -23,21 +21,16 @@ public class StringToListDeserializer extends JsonDeserializer<List<String>> {
 
     @Override
     public List<String> deserialize(JsonParser parser, DeserializationContext ctxt) throws IOException {
-        JsonToken token = parser.getCurrentToken();
-
-        return switch (token) {
+        return switch (parser.getCurrentToken()) {
             case START_ARRAY -> {
                 List<String> result = new ArrayList<>();
-                JsonToken nextToken = parser.nextToken();
-                while (nextToken != JsonToken.END_ARRAY) {
-                    if (nextToken == JsonToken.VALUE_STRING) {
-                        result.add(parser.getText());
-                    } else if (nextToken == JsonToken.VALUE_NULL) {
-                        result.add(null);
-                    } else {
-                        result.add(parser.getValueAsString());
-                    }
-                    nextToken = parser.nextToken();
+                while (parser.nextToken() != JsonToken.END_ARRAY) {
+                    result.add(
+                            switch (parser.getCurrentToken()) {
+                                case VALUE_STRING -> parser.getText();
+                                case VALUE_NULL -> null;
+                                default -> parser.getValueAsString();
+                            });
                 }
                 yield result;
             }
@@ -46,11 +39,10 @@ public class StringToListDeserializer extends JsonDeserializer<List<String>> {
                 if (text == null || text.trim().isEmpty()) {
                     yield new ArrayList<>();
                 }
-                String[] items = text.split("[,;]");
-                yield Arrays.stream(items)
+                yield Arrays.stream(text.split("[,;]"))
                         .map(String::trim)
                         .filter(s -> !s.isEmpty())
-                        .collect(Collectors.toList());
+                        .toList(); // <-- updated here
             }
             case VALUE_NULL -> getNullValue(ctxt);
             case START_OBJECT -> {
@@ -69,7 +61,7 @@ public class StringToListDeserializer extends JsonDeserializer<List<String>> {
             }
             default -> {
                 String value = parser.getValueAsString();
-                yield Collections.singletonList(value);
+                yield value != null ? Collections.singletonList(value) : getNullValue(ctxt);
             }
         };
     }
